Updated robot urdf with imu and no arms

--- a/ucf_sub/src/sub_definition/package.xml
+++ b/ucf_sub/src/sub_definition/package.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <package>
-    <name>ucf_sub_definition</name>
+    <name>sub_definition</name>
     <version>0.0.0</version>
     <description>UCF RoboSub robot description package</description>
     
