--- a/ucf_sub/src/sub_definition/CMakeLists.txt
+++ b/ucf_sub/src/sub_definition/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(ucf_sub_definition)
+project(sub_definition)
 
 find_package(catkin REQUIRED COMPONENTS
   urdf
