--- a/ucf_sub/src/sub_cmd_multiplexer/CMakeLists.txt
+++ b/ucf_sub/src/sub_cmd_multiplexer/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(sub_joystick_control)
+project(sub_cmd_multiplexer)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
@@ -12,8 +12,8 @@ find_package(catkin REQUIRED
 
 catkin_package()
 
-include_directories(include ${catkin_INCLUDE_DIRS})
+#include_directories(include ${catkin_INCLUDE_DIRS})
 
-add_executable(dual_stick_control src/dual_stick_control.cpp)
+#add_executable(dual_stick_control src/dual_stick_control.cpp)
 
-target_link_libraries(dual_stick_control ${catkin_LIBRARIES})
+#target_link_libraries(dual_stick_control ${catkin_LIBRARIES})
