--- a/ucf_sub/src/sub_cmd_multiplexer/package.xml
+++ b/ucf_sub/src/sub_cmd_multiplexer/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package>
-  <name>sub_joystick_control</name>
+  <name>sub_cmd_multiplexer</name>
   <version>0.0.0</version>
-  <description>The sub_joystick_control package</description>
+  <description>A package to handle switchover between human and robot control of the sub</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="chris@todo.todo">chris</maintainer>
+  <maintainer email="npeters2014@knights.ucf.edu">Nicholas Peters</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
